kata-os-rootserver: use sel4-config to sync kernel config
Change-Id: Id5195ab332ea6a324f6930912421090d3168a315
GitOrigin-RevId: edb9027b1210fff1f29fba3bf2b827310bbac6bc

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -2,6 +2,22 @@
 name = "kata-os-rootserver"
 version = "0.1.0"
 edition = "2018"
+build = "build.rs"
+resolver = "2"
+
+[build-dependencies]
+sel4-config = { path = "../../processmanager/apps/system/components/kata-os-common/src/sel4-config" }
+
+[build-env]
+SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"
+
+[features]
+default = []
+
+[lib]
+name = "kata_os_rootserver"
+path = "src/main.rs"
+crate-type = ["staticlib"]
 
 [dependencies]
 cstr_core = { version = "0.2.3", default-features = false }
@@ -10,8 +26,3 @@ kata-logger = { path = "../../processmanager/apps/system/components//DebugConsol
 kata-panic = { path = "../../processmanager/apps/system/components//DebugConsole/kata-panic" }
 kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common" }
 log = "0.4"
-
-[lib]
-name = "kata_os_rootserver"
-path = "src/main.rs"
-crate-type = ["staticlib"]
