kata-os-rootserver: assert CONFIG_PRINTING is configured
BUG: 216492861

Change-Id: I72117d12f882f6d7e8fae7f1cb40ecfd2d6cc658
GitOrigin-RevId: bd446dbf14080f90dc66c4af94088e1b2169ceec

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -13,6 +13,7 @@ SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"
 
 [features]
 default = []
+CONFIG_PRINTING = []
 
 [lib]
 name = "kata_os_rootserver"
@@ -26,3 +27,4 @@ kata-logger = { path = "../../processmanager/apps/system/components//DebugConsol
 kata-panic = { path = "../../processmanager/apps/system/components//DebugConsole/kata-panic" }
 kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common" }
 log = "0.4"
+static_assertions = "1.1"
