cargo: Bump to 2021 edition
Change-Id: I901849596ae12d036bdf42fc53287c29ddcd5ff3
GitOrigin-RevId: 9835086f603e9a4a09346bfea4ec796a696b603d

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -1,9 +1,10 @@
+cargo-features = ["edition2021"]
+
 [package]
 name = "kata-os-rootserver"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 build = "build.rs"
-resolver = "2"
 
 [build-dependencies]
 sel4-config = { path = "../../processmanager/apps/system/components/kata-os-common/src/sel4-config" }
@@ -22,6 +23,9 @@ crate-type = ["staticlib"]
 
 [dependencies]
 cstr_core = { version = "0.2.3", default-features = false }
+kata-allocator = { path = "../../processmanager/apps/system/components/DebugConsole/kata-allocator" }
+kata-logger = { path = "../../processmanager/apps/system/components//DebugConsole/kata-logger" }
+kata-panic = { path = "../../processmanager/apps/system/components//DebugConsole/kata-panic" }
 kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common" }
 log = "0.4"
 static_assertions = "1.1"
