kata-os-rootserver: track kata-os-common packaging change
Change-Id: I1782d72937c8d8d4325c3f36c70236ce2c347405
GitOrigin-RevId: e98c238dd6477867423bee3ea1b9d9d79ac4f1ae

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -23,6 +23,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 cstr_core = { version = "0.2.3", default-features = false }
-kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common" }
+kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common", default-features = false }
 log = "0.4"
 static_assertions = "1.1"
