kata: Make kata-os-rootserver build more portable
Remove the hardcoded ROOTDIR/kata path in CMakeLists.txt but use the
relative path instead. As long as the kata code structure remains
unchanged, it should be relatively safe.

Change-Id: I913b97bf51640b2a8fd09a3b81093f4f36e63f79
GitOrigin-RevId: 177ce4df2aa8affacc8067d34f2d94138e02283b

--- a/kata-os-rootserver/CMakeLists.txt
+++ b/kata-os-rootserver/CMakeLists.txt
@@ -62,11 +62,11 @@ add_config_library(capdl_loader_app "${configure_string}")
 # Build an archive of the RUST bits
 # TODO(mattharvey): rust.cmake maybe belongs here with processmanager
 #    doing the reach-over
-include($ENV{ROOTDIR}/kata/projects/processmanager/apps/system/rust.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../../processmanager/apps/system/rust.cmake)
 
 RustAddLibrary(
     kata_rootserver
-    SOURCE_DIR $ENV{ROOTDIR}/kata/projects/capdl/kata-os-rootserver
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     LIB_FILENAME libkata_os_rootserver.a
 )
 
