--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition2021"]
-
 [package]
 name = "kata-os-rootserver"
 version = "0.1.0"
@@ -7,16 +5,14 @@ edition = "2021"
 build = "build.rs"
 
 [build-dependencies]
-# build.rs depends on SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"
 sel4-config = { path = "../../processmanager/apps/system/components/kata-os-common/src/sel4-config" }
+
+[build-env]
+SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"
 
 [features]
 default = []
-# Used by sel4-config to extract kernel config
 CONFIG_PRINTING = []
-# Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
-LOG_DEBUG = []
-LOG_TRACE = []
 
 [lib]
 name = "kata_os_rootserver"
