processmanager: Fix the parent name to "kata"
Change-Id: Ia74dcc4d5c6006bca8e130d192d978ed35581132
GitOrigin-RevId: 7977e4866f052e7fb93251ee3e705daf25a2176d

--- a/kata-os-rootserver/CMakeLists.txt
+++ b/kata-os-rootserver/CMakeLists.txt
@@ -62,7 +62,7 @@ add_config_library(capdl_loader_app "${configure_string}")
 # Build an archive of the RUST bits
 # TODO(mattharvey): rust.cmake maybe belongs here with processmanager
 #    doing the reach-over
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../processmanager/apps/system/rust.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../../kata/apps/system/rust.cmake)
 
 RustAddLibrary(
     kata_rootserver
