--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -38,5 +38,5 @@ crate-type = ["staticlib"]
 [dependencies]
 cstr_core = { version = "0.2.3", default-features = false }
 kata-os-common = { path = "../../kata/apps/system/components/kata-os-common", default-features = false }
-log = "0.4"
+log = { version = "0.4", features = ["release_max_level_info"] }
 static_assertions = "1.1"
