kata-os-rootserver: enable (now optional) capdl support in kata-os-common
Change-Id: Ie5b91a61b598beeb187591b19aa2da4ff69195b4
GitOrigin-RevId: 01814ed58fc6269ef20ba19d09c2fd3a01439107

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -37,6 +37,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 cstr_core = { version = "0.2.3", default-features = false }
-kata-os-common = { path = "../../kata/apps/system/components/kata-os-common", default-features = false }
+kata-os-common = { path = "../../kata/apps/system/components/kata-os-common", default-features = false, features = ["capdl_support"] }
 log = { version = "0.4", features = ["release_max_level_info"] }
 static_assertions = "1.1"
