cantrip-os-rootserver: fix multiplatform builds
Track build changes to pass the platform feature to cargo (via cmake).

Change-Id: I4a9a265e1b31c3e769a742cb17a308041293a889
GitOrigin-RevId: 847ceb79f64a37a6cf95569f2b5c24aacd460cd1

--- a/kata-os-rootserver/Cargo.toml
+++ b/kata-os-rootserver/Cargo.toml
@@ -24,6 +24,8 @@ sel4-config = { path = "../../cantrip/apps/system/components/cantrip-os-common/s
 
 [features]
 default = []
+CONFIG_PLAT_BCM2837 = []
+CONFIG_PLAT_SPARROW = []
 # Used by sel4-config to extract kernel config
 CONFIG_PRINTING = []
 # Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
