cantrip-os-rootserver: track cantrip-os-logger change
cantrip-os-logger is now feature-gated, add it and while here run rustfmt
(and manually break the long cantrip-os-common dependency).

Change-Id: Ia350c753d2208356481d723a51dca3e6b87ac2e7
GitOrigin-RevId: 64d844f9c6df74413e5a9c39a19306961f234793

--- a/cantrip-os-rootserver/Cargo.toml
+++ b/cantrip-os-rootserver/Cargo.toml
@@ -38,8 +38,12 @@ name = "cantrip_os_rootserver"
 path = "src/main.rs"
 crate-type = ["staticlib"]
 
+[dependencies.cantrip-os-common]
+default-features = false
+features = ["capdl_support", "logger_support"]
+path = "../../cantrip/apps/system/components/cantrip-os-common"
+
 [dependencies]
-cantrip-os-common = { path = "../../cantrip/apps/system/components/cantrip-os-common", default-features = false, features = ["capdl_support"] }
 cfg-if = "1.0"
 cstr_core = { version = "0.2.3", default-features = false }
 log = { version = "0.4", features = ["release_max_level_info"] }
