rust templates: Squash and merge into master
Includes the following commits:
  Base rust template changes
  cantrip-os-rootserver: fixup stale comments

Change-Id: I4088597e45d5b55dfa4a8831715a393e494960ce
GitOrigin-RevId: 81916cc50a13542e92b0e0d6a40256030ccc1407

--- a/cantrip-os-rootserver/Cargo.toml
+++ b/cantrip-os-rootserver/Cargo.toml
@@ -45,6 +45,6 @@ path = "../../cantrip/apps/system/components/cantrip-os-common"
 
 [dependencies]
 cfg-if = "1.0"
-cstr_core = { version = "0.2.3", default-features = false }
+core2 = { version = "0.3", default-features = false }
 log = { version = "0.4", features = ["release_max_level_info"] }
 static_assertions = "1.1"
