cantrip-os-rootserver: quiet cargo complaint
Rename "main.rs" to "lib.rs" to quiet an innocuous cargo complaint.

Change-Id: I6ab99c1417d73d077d147e8d4695d3253e1742f3
GitOrigin-RevId: 47a2b3def99641b972e5cbc9c4f1fdf8ed21e7fe

--- a/cantrip-os-rootserver/Cargo.toml
+++ b/cantrip-os-rootserver/Cargo.toml
@@ -38,7 +38,7 @@ LOG_TRACE = ["log/release_max_level_trace"]
 
 [lib]
 name = "cantrip_os_rootserver"
-path = "src/main.rs"
+path = "src/lib.rs"
 crate-type = ["staticlib"]
 
 [dependencies.cantrip-os-common]
